--- a/src/main/resources/CSS/qlthanhvien.css
+++ b/src/main/resources/CSS/qlthanhvien.css
@@ -8,7 +8,7 @@
 }
 
 /* Tiêu đề chính */
-.employee-details-section{
+.right{
     -fx-alignment: center;
     -fx-text-alignment: center;
     -fx-background-color: white;
