--- a/src/main/resources/FXML/DatBan.fxml
+++ b/src/main/resources/FXML/DatBan.fxml
@@ -11,7 +11,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane prefHeight="800.0" prefWidth="1400.0" style="-fx-background-color: D9D9D9;" stylesheets="@../CSS/datban.css, @../CSS/AppMD.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.DatBanController">
@@ -29,7 +32,7 @@
                         <children>
 
                             <!-- Cột chọn ngày -->
-                            <VBox alignment="CENTER_LEFT" spacing="6" styleClass="time-field" HBox.hgrow="ALWAYS">
+                            <VBox alignment="CENTER_LEFT" spacing="6" style="-fx-alignment: center;" styleClass="time-field" HBox.hgrow="ALWAYS">
                                 <Label styleClass="field-label" text="Ngày đặt bàn" />
                                 <DatePicker fx:id="datePicker" promptText="Chọn ngày" styleClass="date-picker" />
                             </VBox>
@@ -45,9 +48,9 @@
                             </VBox>
 
                             <!-- Cột số lượng -->
-                            <VBox alignment="CENTER_LEFT" spacing="6" styleClass="time-field" HBox.hgrow="ALWAYS">
+                            <VBox alignment="CENTER_LEFT" spacing="6" style="-fx-alignment: center;" styleClass="time-field" HBox.hgrow="ALWAYS">
                                 <Label styleClass="field-label" text="Số lượng" />
-                                <TextField fx:id="noteField" promptText="số lượng" styleClass="filter-tf" HBox.hgrow="ALWAYS" />
+                                <TextField fx:id="noteField" maxWidth="150.0" promptText="số lượng" styleClass="filter-tf" HBox.hgrow="ALWAYS" />
                             </VBox>
 
                         </children>
@@ -270,33 +273,32 @@
             </padding>
 
             <Label alignment="CENTER" prefHeight="54.0" prefWidth="351.0" styleClass="section-title" text="Thông Tin Đặt Bàn" textAlignment="CENTER" />
-
-            <VBox prefHeight="196.0" prefWidth="340.0" spacing="12" styleClass="customer-info" VBox.vgrow="ALWAYS">
-                <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Label prefHeight="18.0" prefWidth="131.0" styleClass="info-label" text="Họ và tên:" />
-                    <TextField fx:id="txtTenKH" prefHeight="19.0" prefWidth="230.0" promptText="Nhập họ tên" styleClass="filter-tf" HBox.hgrow="ALWAYS" />
-                </HBox>
-
-                <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Label styleClass="info-label" text="SĐT:" />
-                    <TextField fx:id="txtSDT" prefHeight="24.0" prefWidth="228.0" promptText="Nhập số điện thoại" styleClass="filter-tf" HBox.hgrow="ALWAYS" />
-                </HBox>
-
-                <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Label styleClass="info-label" text="Khu vực:" />
-                    <ComboBox fx:id="cboKhuVuc" HBox.hgrow="ALWAYS" />
-                </HBox>
-
-                <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Label prefHeight="18.0" prefWidth="120.0" styleClass="info-label" text="Số lượng khách:" />
-                    <TextField fx:id="txtSoLuong" prefHeight="24.0" prefWidth="228.0" promptText="Số người" styleClass="filter-tf" HBox.hgrow="ALWAYS" />
-                </HBox>
-
-                <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Label styleClass="info-label" text="Ghi chú:" />
-                    <TextField fx:id="txtGhiChu" prefHeight="24.0" prefWidth="228.0" promptText="Ghi chú đặc biệt" styleClass="filter-tf" HBox.hgrow="ALWAYS" />
-                </HBox>
-            </VBox>
+         <GridPane vgap="10.0">
+           <columnConstraints>
+             <ColumnConstraints hgrow="SOMETIMES" maxWidth="149.0" minWidth="10.0" prefWidth="119.0" />
+             <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="191.0" />
+           </columnConstraints>
+           <rowConstraints>
+             <RowConstraints />
+             <RowConstraints />
+             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+           </rowConstraints>
+            <children>
+                    <Label prefHeight="18.0" prefWidth="131.0" styleClass="info-label" text="Họ và tên:" GridPane.rowIndex="1" />
+                    <TextField fx:id="txtTenKH" prefHeight="19.0" prefWidth="230.0" promptText="Nhập họ tên" styleClass="filter-tf" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <Label styleClass="info-label" text="SĐT:" GridPane.rowIndex="2" />
+                    <TextField fx:id="txtSDT" prefHeight="24.0" prefWidth="228.0" promptText="Nhập số điện thoại" styleClass="filter-tf" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                    <Label styleClass="info-label" text="Khu vực:" GridPane.rowIndex="3" />
+                    <ComboBox fx:id="cboKhuVuc" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                    <Label styleClass="info-label" text="Số lượng khách:" GridPane.rowIndex="4" />
+                    <TextField fx:id="txtSoLuong" prefHeight="24.0" prefWidth="228.0" promptText="Số người" styleClass="filter-tf" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                    <Label styleClass="info-label" text="Ghi chú:" GridPane.rowIndex="5" />
+                    <TextField fx:id="txtGhiChu" prefHeight="24.0" prefWidth="228.0" promptText="Ghi chú đặc biệt" styleClass="filter-tf" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            </children>
+         </GridPane>
 
             <AnchorPane prefHeight="452.0" prefWidth="340.0" VBox.vgrow="ALWAYS">
                 <children>
