--- a/src/main/resources/FXML/QLThanhVien.fxml
+++ b/src/main/resources/FXML/QLThanhVien.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
@@ -12,12 +11,10 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.DatePicker?>
-<BorderPane prefHeight="800" prefWidth="1400" styleClass="root-pane" stylesheets="@../CSS/qlthanhvien.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.QLThanhVienController">
+<BorderPane prefHeight="800" prefWidth="1400" styleClass="root-pane" stylesheets="@../CSS/qlthanhvien.css, @../CSS/AppMD.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.QLThanhVienController">
 
     <!-- Nội dung chính ở giữa -->
     <center>
@@ -49,16 +46,16 @@
 
     <!-- Phần bên phải: Thông tin chi tiết nhân viên -->
     <right>
-        <VBox prefWidth="480" spacing="20" styleClass="employee-details-section" HBox.hgrow="ALWAYS">
+        <VBox prefWidth="480" spacing="20" styleClass="right" HBox.hgrow="ALWAYS">
             <!-- Tiêu đề -->
-            <Label prefHeight="64.0" prefWidth="424.0" styleClass="main-title" text="Thông Tin Nhân Viên" />
+            <Label minWidth="300.0" styleClass="main-title" text="Thông Tin Nhân Viên" />
 
             <!-- Form thông tin -->
             <VBox prefHeight="652.0" prefWidth="480.0" spacing="15" styleClass="info-form-section">
                 <GridPane hgap="20" styleClass="info-grid" vgap="15">
                     <columnConstraints>
-                        <ColumnConstraints percentWidth="30" />
-                        <ColumnConstraints percentWidth="70" />
+                        <ColumnConstraints percentWidth="36.0" />
+                        <ColumnConstraints percentWidth="64.0" />
                     </columnConstraints>
 
                     <!-- Mã nhân viên -->
