--- a/src/main/resources/FXML/TraCuuHoaDon.fxml
+++ b/src/main/resources/FXML/TraCuuHoaDon.fxml
@@ -22,7 +22,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="root" prefHeight="800.0" prefWidth="1400.0" styleClass="borderPane_main" stylesheets="@../CSS/tracuuhoadon.css, @../CSS/AppMD.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.TraCuuHoaDonController">
+<BorderPane fx:id="root" prefHeight="800.0" prefWidth="1400.0" styleClass="borderPane_main" stylesheets="@../CSS/tracuuhoadon.css, @../CSS/AppMD.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.TraCuuHoaDonController">
 
     <!-- Trung tâm -->
     <center>
@@ -143,15 +143,15 @@
 
     <!-- Phần bên phải -->
     <right>
-        <VBox prefWidth="360" spacing="10" styleClass="right-section">
+        <VBox spacing="10" styleClass="right">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
             <!-- Khối trắng chính -->
-            <VBox prefHeight="765.0" prefWidth="320.0" spacing="15" style="-fx-background-color: F3F3F3;" styleClass="right-content">
+            <VBox prefHeight="765.0" prefWidth="320.0" spacing="15" style="-fx-background-color: F3F3F3; -fx-alignment: center;" styleClass="right-content">
                 <!-- Tiêu đề -->
-                <Label prefHeight="48.0" prefWidth="280.0" styleClass="title-right" text="Thông tin đặt bàn" />
+                <Label minWidth="300.0" styleClass="title-right" text="Thông tin đặt bàn" />
 
                 <!-- Form thông tin -->
                 <GridPane hgap="10" vgap="10">
