--- a/src/main/resources/FXML/ThongKe.fxml
+++ b/src/main/resources/FXML/ThongKe.fxml
@@ -7,16 +7,14 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
@@ -56,7 +54,7 @@
                                 <Insets />
                             </VBox.margin>
                             <children>
-                                <ScrollPane prefWidth="0.0" styleClass="center-scroll-pane">
+                                <ScrollPane fitToWidth="true" prefWidth="0.0" styleClass="center-scroll-pane">
                                     <content>
                                         <VBox fx:id="vboxDishList" prefHeight="420.0" prefWidth="520.0" spacing="20.0" style="-fx-padding: 10;" styleClass="dish-list">
 
@@ -134,11 +132,24 @@
                 </VBox>
                 <VBox alignment="CENTER" spacing="10" styleClass="grid-item-2" GridPane.rowIndex="1">
                     <children>
-                        <!-- Tiêu đề riêng -->
-                        <Label styleClass="chart-title" text="Doanh thu theo giờ trong ngày" />
+                  <HBox alignment="CENTER">
+                     <children>
+                              <!-- Tiêu đề riêng -->
+                              <Label prefHeight="26.0" prefWidth="265.0" styleClass="chart-title" text="Doanh thu theo giờ trong ngày">
+                           <HBox.margin>
+                              <Insets top="5.0" />
+                           </HBox.margin>
+                        </Label>
+                              <DatePicker fx:id="datePicker" prefHeight="27.0" prefWidth="157.0" styleClass="date-picker">
+                           <HBox.margin>
+                              <Insets left="30.0" />
+                           </HBox.margin>
+                        </DatePicker>
+                     </children>
+                  </HBox>
 
                         <!-- Biểu đồ đường -->
-                        <LineChart createSymbols="true" legendVisible="false" prefHeight="250" prefWidth="400">
+                        <LineChart fx:id="lineChart" createSymbols="true" legendVisible="true" prefHeight="320.0" prefWidth="734.0">
                             <xAxis>
                                 <NumberAxis label="Giờ trong ngày" lowerBound="0" tickUnit="1" upperBound="24" />
                             </xAxis>
@@ -152,16 +163,28 @@
                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10" styleClass="grid-item-2" GridPane.columnIndex="1" GridPane.rowIndex="1">
 
                     <children>
-                        <!-- Tiêu đề riêng -->
-                        <Label styleClass="chart-title" text="Số lượng đơn hàng theo ngày trong tuần" />
+                  <HBox alignment="CENTER" prefHeight="48.0" prefWidth="596.0" spacing="10.0">
+                     <children>
+                        <VBox>
+                           <children>
+                                    <Label styleClass="chart-title" text="Số lượng đơn hàng theo ngày trong tuần" />
+                              <HBox alignment="CENTER" spacing="20.0">
+                                 <children>
+                                    <Label text="Chọn ngày:" />
+                                           <DatePicker fx:id="datePickerTuan" prefWidth="130.0" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
 
-                        <!-- Biểu đồ cột -->
-                        <BarChart barGap="3" categoryGap="10" legendVisible="false" prefHeight="250" prefWidth="400">
+                        <BarChart fx:id="barChart" barGap="3" categoryGap="10" prefHeight="340.0" prefWidth="596.0">
                             <xAxis>
                                 <CategoryAxis label="Thứ" />
                             </xAxis>
                             <yAxis>
-                                <NumberAxis label="Số lượng" />
+                                <NumberAxis label="Số lượng đơn hàng" />
                             </yAxis>
                         </BarChart>
                     </children>
