--- a/src/main/resources/CSS/dashboard.css
+++ b/src/main/resources/CSS/dashboard.css
@@ -312,3 +312,89 @@
 /*    -fx-background-color: #FF5722, white;*/
 /*    -fx-padding: 4px;*/
 /*}*/
+
+/* ========= ITEM THÔNG BÁO ========= */
+
+.notif-item {
+    -fx-background-color: white;
+    -fx-background-radius: 16;
+    -fx-border-color: #2f1d0b;
+    -fx-border-width: 2;
+    -fx-border-radius: 16;
+    -fx-padding: 0;
+    -fx-spacing: 1;
+}
+
+.notif-left {
+    -fx-padding: 8 0 2 10;
+    -fx-spacing: 2;
+    -fx-min-width: 90px;
+    -fx-border-color: transparent #2f1d0b transparent transparent;
+    -fx-border-width: 0 2 0 0;
+    -fx-background-radius: 12 0 0 12;
+    -fx-border-radius: 12 0 0 12;
+}
+.notif-sub {
+    -fx-font-size: 12px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #ffffff;
+}
+
+.notif-sub-right{
+    -fx-font-size: 9px;
+    -fx-font-weight: bold;
+    -fx-padding: 1;
+}
+
+.notif-sub-right-02{
+    -fx-font-size: 12px;
+    -fx-font-weight: bold;
+    -fx-padding: 1;
+}
+
+/* --- Status tags nhỏ gọn --- */
+.notif-status-green {
+    -fx-background-color: #baffc2;
+    -fx-text-fill: #008000;
+    -fx-font-size: 12px;       /* từ 14px → 11px */
+    -fx-font-weight: bold;
+    -fx-padding: 2 6;          /* từ 4 12 → 2 6 */
+    -fx-background-radius: 10;
+}
+
+.notif-status-red {
+    -fx-background-color: #ffb8b8;
+    -fx-text-fill: #b30000;
+    -fx-font-size: 12px;
+    -fx-font-weight: bold;
+    -fx-padding: 2 6;
+    -fx-background-radius: 10;
+}
+
+.notif-status-yellow {
+    -fx-background-color: #faeb9c;
+    -fx-text-fill: #7A5E00;
+    -fx-font-size: 12px;
+    -fx-font-weight: bold;
+    -fx-padding: 2 6;
+    -fx-background-radius: 10;
+}
+
+.notif-stock {
+    -fx-min-width: 90px;
+    -fx-max-width: 90px;
+    -fx-font-size: 12px;
+}
+
+.notif-backgr-red {
+    -fx-background-color: #F44336;
+}
+
+.notif-backgr-green {
+    -fx-background-color: #4CAF50;
+}
+
+.notif-backgr-yellow {
+    -fx-background-color: #FFEB3B;
+}
+
