--- a/src/main/resources/CSS/splash.css
+++ b/src/main/resources/CSS/splash.css
@@ -1,24 +1,29 @@
-.root {
-    -fx-background-color: linear-gradient(to bottom, #ff6600, #ff9900);
-}
+/*.root {*/
+/*    -fx-background-color: linear-gradient(to bottom, #ff6600, #ff9900);*/
+/*}*/
 
-.label {
-    -fx-font-weight: bold;
-}
+/*.label {*/
+/*    -fx-font-weight: bold;*/
+/*}*/
 
-/* Thanh progress */
-.splash-progress {
-    -fx-accent: #4CAF50;
-    -fx-control-inner-background: #ddd;
-    -fx-background-insets: 0;
-    -fx-background-radius: 10;
-    -fx-border-radius: 10;
-    -fx-padding: 2;
-}
+/*!* Thanh progress *!*/
+/*.splash-progress {*/
+/*    -fx-accent: #4CAF50;*/
+/*    -fx-control-inner-background: linear-gradient(to bottom, #ff6600, #ff9900);*/
+/*    -fx-background-insets: 0;*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-border-radius: 10;*/
+/*    -fx-padding: 2;*/
+/*}*/
 
-/* Thanh chạy mềm mại */
-.splash-progress .bar {
-    -fx-background-color: linear-gradient(to right, #4CAF50, #8BC34A);
-    -fx-background-insets: 0;
-    -fx-background-radius: 10;
-}
+/*!* Thanh chạy mềm mại *!*/
+/*.splash-progress .bar {*/
+/*    -fx-background-color: linear-gradient(to right, #4CAF50, #8BC34A);*/
+/*    -fx-background-insets: 0;*/
+/*    -fx-background-radius: 10;*/
+/*}*/
+
+/*.labelLogo {*/
+/*    -fx-font-size: 28px;*/
+/*    -fx-text-fill: linear-gradient(to bottom, #ff6600, #ff9900);"*/
+/*}*/
