--- a/src/main/resources/FXML/SplashScreen.fxml
+++ b/src/main/resources/FXML/SplashScreen.fxml
@@ -5,12 +5,16 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 
-<?import java.lang.String?>
-<AnchorPane prefHeight="600" prefWidth="1000" xmlns="http://javafx.com/javafx/24.0.1"
+<AnchorPane prefHeight="600" prefWidth="1000"
+            xmlns="http://javafx.com/javafx/24.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="ui.controllers.SplashController">
+            fx:controller="ui.controllers.SplashController"
+            style="-fx-background-color: linear-gradient(to bottom, #ff6600, #ff9900);"
+             stylesheets="/CSS/splash.css">
 
+    <!-- Nội dung căn giữa -->
     <VBox alignment="CENTER" spacing="20" layoutX="0" layoutY="0" prefWidth="1000" prefHeight="600">
 
         <!-- Logo -->
@@ -21,15 +25,13 @@
         </ImageView>
 
         <!-- Tiêu đề -->
-        <Label text="CrabKing Restaurant" style="-fx-font-size: 28px; -fx-text-fill: #ffffff;"/>
+        <Label text="CrabKing Restaurant"
+               style="-fx-font-size:28px; -fx-font-weight:bold; -fx-text-fill:white;" />
 
         <!-- Progress bar -->
-        <ProgressBar fx:id="progressBar" layoutX="50" layoutY="300" prefWidth="500" prefHeight="20" styleClass="splash-progress"/>
+        <ProgressBar fx:id="progressBar" prefWidth="500" prefHeight="20"
+                     style="-fx-accent: #4CAF50; -fx-background-radius:10;"/>
     </VBox>
 
-    <!-- Nền màu đậm -->
-    <stylesheets>
-        <String fx:value="@../CSS/splash.css"/>
-    </stylesheets>
-
 </AnchorPane>
+
