--- a/src/main/resources/FXML/QLBan.fxml
+++ b/src/main/resources/FXML/QLBan.fxml
@@ -12,7 +12,19 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="800" prefWidth="1400.0" style="-fx-background-color: #D9D9D9;" stylesheets="@../CSS/qlban.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.QLBanController">
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.control.Button?>
+<?import javafx.beans.binding.DoubleBinding?>
+<StackPane fx:id="rootPane"
+           xmlns="http://javafx.com/javafx/24.0.1"
+           xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="ui.controllers.QLBanController"
+           stylesheets="@../CSS/qlban.css">
+    <BorderPane fx:id="mainContainer"
+                prefHeight="800" prefWidth="1400"
+                style="-fx-background-color: #D9D9D9;"
+                StackPane.alignment="CENTER">
 
     <!-- Nội dung chính -->
     <center>
@@ -38,7 +50,7 @@
                         <ComboBox fx:id="comboKhuVuc" prefWidth="140" promptText="Khu vực" />
 
                         <!-- Nút thêm bàn -->
-                        <Label styleClass="menu-add-btn" text="+" />
+                        <Label fx:id="btnAddBan" styleClass="menu-add-btn" text="+" />
                     </HBox>
 
 
@@ -82,3 +94,55 @@
         </VBox>
     </center>
 </BorderPane>
+    <!-- Modal Layer -->
+    <StackPane fx:id="modalLayer" visible="false" managed="false">
+        <!-- Lớp phủ full màn hình, tự co với rootPane -->
+        <Rectangle fx:id="modalBg" fill="black" opacity="0.35"/>
+
+        <!-- Modal box căn giữa -->
+        <VBox fx:id="modalBox"
+              maxWidth="400"
+              prefWidth="400"
+              minWidth="400"
+              maxHeight="400"
+              prefHeight="400"
+              minHeight="400"
+              StackPane.alignment="CENTER"
+              spacing="15"
+              alignment="CENTER"
+              style="-fx-background-color: white; -fx-background-radius: 12; -fx-padding: 20;">
+
+            <Label text="Thêm Bàn" style="-fx-font-size: 22px; -fx-font-weight: bold;" />
+
+            <VBox spacing="8">
+                <Label text="Mã bàn:"/>
+                <TextField fx:id="txtModalMaBan"
+                           prefWidth="200" prefHeight="40" maxHeight="40"
+                           maxWidth="200"  minHeight="40"
+                           minWidth="200"/>
+            </VBox>
+
+            <VBox spacing="8">
+                <Label text="Loại bàn:"/>
+                <ComboBox fx:id="comboModalLoaiBan"  prefWidth="100"
+                          maxWidth="100"
+                          minWidth="100"/>
+            </VBox>
+
+            <VBox spacing="8">
+                <Label text="Khu vực:"/>
+                <ComboBox fx:id="comboModalKhuVuc"  prefWidth="100"
+                          maxWidth="100"
+                          minWidth="100"/>
+            </VBox>
+
+            <HBox spacing="12" alignment="CENTER_RIGHT">
+                <Button fx:id="btnModalCancel" text="Hủy"
+                        style="-fx-background-color:#bbb; -fx-background-radius:6; -fx-padding:6 18;" />
+                <Button fx:id="btnModalSave" text="Lưu"
+                        style="-fx-background-color:#4CAF50; -fx-text-fill:white; -fx-background-radius:6; -fx-padding:6 18;" />
+            </HBox>
+        </VBox>
+    </StackPane>
+
+</StackPane>
