--- a/src/main/resources/FXML/QLBan.fxml
+++ b/src/main/resources/FXML/QLBan.fxml
@@ -139,7 +139,7 @@
             <HBox spacing="12" alignment="CENTER_RIGHT">
                 <Button fx:id="btnModalCancel" text="Hủy"
                         style="-fx-background-color:#bbb; -fx-background-radius:6; -fx-padding:6 18;" />
-                <Button fx:id="btnModalSave" text="Lưu"
+                <Button fx:id="btnModalSave" text="Thêm"
                         style="-fx-background-color:#4CAF50; -fx-text-fill:white; -fx-background-radius:6; -fx-padding:6 18;" />
             </HBox>
         </VBox>
